@@ -1,3 +1,7 @@
+2005-05-28  wrobell <wrobell@pld-linux.org>
+	* gaphor/diagram/itemactions.py, gaphor/ui/diagramactions.py:
+	capitalize menu labels, tooltips first word capitalized
+
 2005-05-25  wrobell <wrobell@pld-linux.org>
 	* gaphor/diagram/itemactions.py, gaphor/diagram/operation.py,
 	gaphor/ui/namespace.py: allow to set class operation to be abstract
